login, signup, waiting 화면 완료
