# backend/routes/user/upload/profile_image.js
@@ -12,7 +12,9 @@ const { v4 } = require('uuid');
 const multer = require('multer');
 const storage = multer.diskStorage({
     destination: function (req, file, cb) {
-        cb(null, 'wwwroot/images/temp/profile_image');
+        let UID = req.params.UID;
+        let dir = `wwwroot/images/users/${UID}`;
+        cb(null, dir);
     },
     filename: function (req, file, cb) {
         let ext = file.originalname.split(".")[1];
@@ -23,20 +25,34 @@ const storage = multer.diskStorage({
   
 const upload = multer({ storage: storage });
 
-router.post('/user/upload/temp/image', upload.single('file'), async function(req, res, next) {
+router.post('/user/:UID/upload/profile_image', upload.single('file'), async function(req, res, next) {
+    /*
+        #swagger.description = '해당 파일을 저장하는 API'
+        #swagger.tags = ['user']
+        #swagger.parameters['params'] = {
+            in: 'params',
+            schema: {
+                params: {
+                    file: null,
+                }
+            }
+        }
+    */
+    const db = require(`${path}/mysql2`);
     let user_dict = require(`${path}/app`)["user_dict"];
     let io = require(`${path}/bin/www`)["io"];
-
-    let token = req.body.token;
-    let coupleInfoId = req.body.coupleInfoId;
+    let UID = req.params.UID;
     let file = req.file;
-
-    let image_new_path = `/images/temp/profile_image/${file.filename}`;
+    let filename = file.filename;
+    let url = `/images/users/${UID}/${filename}`;
+    await db.query(`
+        update appUsers
+        set image=?
+        where UID=?
+    `, [url, UID]);
     
     return res.json({
         success: 1,
-        filename: file.filename,
-        path: image_new_path,
     });
 });
 
